test/1.2/errors/T_EASZVAR_5.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
extern int f();
bank b {
    /// ERROR EASZVAR
    register r[i in 0..f()];
}
